# async-file-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: arg_parser.rs  downloader.rs  file.rs  lib.rs  main.rs  progressbar.rs
