[package]
name = "async-file-downloader"
version = "0.1.0"
authors = ["cwouyang <cwouyang@protonmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
clap = "2.30.0"
indicatif = "0.13.0"
md5 = "0.7.0"
num_cpus = "1.8.0"
reqwest = "0.9.24"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
threadpool = "1.7.1"
url = "2.1.0"
